--- a/vba_modules/ThisWorkbook.cls
+++ b/vba_modules/ThisWorkbook.cls
@@ -1,359 +1,309 @@
 VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
+  Persistable = 0  'NotPersistable
+  DataBindingBehavior = 0  'vbNone
+  DataSourceBehavior = 0   'vbNone
+  MTSTransactionMode = 0   'NotAnMTSObject
 END
 Attribute VB_Name = "ThisWorkbook"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = True
+'
+' ThisWorkbook - 工作簿事件处理
+' 处理工作簿打开、关闭等事件，初始化环境
+'
 Option Explicit
 
-' ========== 自动刷新模块 (ThisWorkbook) ==========
-' 负责工作簿事件处理和自动刷新功能
-
-' ========== 工作簿打开事件 ==========
+' 工作簿打开事件
 Private Sub Workbook_Open()
-    ' 工作簿打开时自动执行的事件
-    ' 根据配置决定是否自动刷新ETF价格数据
-    
     On Error GoTo ErrorHandler
     
-    ' 显示欢迎消息
-    Application.StatusBar = "ETF价格追踪器已启动..."
+    ' 初始化配置
+    Call InitializeWorkbook
     
-    ' 延迟一下，让Excel完全加载
-    Application.Wait DateAdd("s", 1, Now)
+    ' 检查环境
+    Call CheckEnvironment
     
-    ' 初始化工作表（如果需要）
-    Call InitializeWorksheetIfNeeded
-    
-    ' 检查是否启用自动刷新
-    If ShouldAutoRefresh() Then
-        Call PerformAutoRefresh
-    Else
-        Call ShowWelcomeMessage
+    ' 显示欢迎信息（仅第一次）
+    If Not HasBeenInitialized() Then
+        Call ShowWelcomeDialog
+        Call MarkAsInitialized
     End If
     
-    ' 创建刷新按钮（如果不存在）
-    Call CreateRefreshButtonIfNeeded
-    
-    Application.StatusBar = False
     Exit Sub
     
 ErrorHandler:
-    Application.StatusBar = False
-    MsgBox "工作簿初始化时发生错误：" & Err.Description, vbExclamation, "初始化错误"
+    Debug.Print "工作簿打开事件错误: " & Err.Description
 End Sub
 
-' ========== 工作簿关闭前事件 ==========
+' 工作簿关闭前事件
 Private Sub Workbook_BeforeClose(Cancel As Boolean)
-    ' 工作簿关闭前的清理工作
-    
     On Error Resume Next
     
-    ' 重置API频率限制计时器
-    Call ResetApiRateLimit
-    
-    ' 清除状态栏
+    ' 清理状态栏
     Application.StatusBar = False
     
-    ' 显示退出消息
-    Debug.Print "ETF价格追踪器已关闭 - " & Now()
+    ' 可以在这里添加其他清理工作
 End Sub
 
-' ========== 工作表激活事件 ==========
+' 工作表激活事件
 Private Sub Workbook_SheetActivate(ByVal Sh As Object)
-    ' 当激活ETF价格工作表时的处理
-    
     On Error Resume Next
     
-    If Sh.Name = WORKSHEET_NAME Then
-        ' 检查数据新鲜度
-        Call CheckDataFreshness
-    End If
+    ' 确保工作表有正确的表头
+    Call EnsureWorksheetHeaders(Sh)
 End Sub
 
-' ========== 检查是否应该自动刷新 ==========
-Private Function ShouldAutoRefresh() As Boolean
-    ' 确定是否应该自动刷新数据
-    ' 基于配置、时间、网络连接等因素
-    
-    ShouldAutoRefresh = False
-    
+' 初始化工作簿
+Private Sub InitializeWorkbook()
     On Error GoTo ErrorHandler
     
-    ' 检查基本配置
-    If Not ValidateConfiguration() Then
-        Exit Function
-    End If
+    ' 设置应用程序属性
+    Application.DisplayAlerts = True
+    Application.ScreenUpdating = True
     
-    ' 检查是否在工作时间（避免在非交易时间频繁调用API）
-    If Not IsMarketHours() Then
-        Debug.Print "当前非交易时间，跳过自动刷新"
-        Exit Function
-    End If
+    ' 加载配置
+    Module_Config.LoadConfig
     
-    ' 检查上次刷新时间（避免频繁刷新）
-    If Not ShouldRefreshBasedOnTime() Then
-        Debug.Print "距离上次刷新时间太短，跳过自动刷新"
-        Exit Function
-    End If
+    ' 初始化当前工作表
+    Call EnsureWorksheetHeaders(ActiveSheet)
     
-    ShouldAutoRefresh = True
-    Exit Function
+    ' 创建按钮（如果不存在）
+    Call CreateControlButtons
+    
+    Exit Sub
     
 ErrorHandler:
-    Debug.Print "检查自动刷新条件时发生错误: " & Err.Description
-    ShouldAutoRefresh = False
-End Function
+    Debug.Print "初始化工作簿错误: " & Err.Description
+End Sub
 
-' ========== 执行自动刷新 ==========
-Private Sub PerformAutoRefresh()
-    ' 执行自动刷新过程
-    
+' 检查运行环境
+Private Sub CheckEnvironment()
     On Error GoTo ErrorHandler
     
-    ' 显示提示信息
-    Dim result As VbMsgBoxResult
-    result = MsgBox("检测到ETF价格数据，是否立即刷新最新价格？" & vbCrLf & vbCrLf & _
-                   "提示：刷新过程可能需要几分钟时间", _
-                   vbYesNo + vbQuestion + vbDefaultButton1, "自动刷新")
+    Dim hasExecutable As Boolean
+    Dim hasConfig As Boolean
     
-    If result = vbYes Then
-        Application.StatusBar = "正在自动刷新ETF价格数据..."
-        
-        ' 执行刷新
-        Call RefreshAllPrices
-        
-        ' 记录刷新时间
-        Call RecordRefreshTime
+    ' 检查可执行文件
+    hasExecutable = (Len(Module_API.GetExecutablePath()) > 0)
+    
+    ' 检查配置
+    hasConfig = Module_Config.ValidateConfig()
+    
+    ' 更新状态栏
+    If hasExecutable And hasConfig Then
+        Application.StatusBar = "ETF工具就绪"
+    ElseIf hasExecutable Then
+        Application.StatusBar = "需要配置API Token"
     Else
-        Call ShowManualRefreshTip
+        Application.StatusBar = "缺少API可执行文件"
     End If
     
     Exit Sub
     
 ErrorHandler:
-    Application.StatusBar = False
-    MsgBox "自动刷新时发生错误：" & Err.Description, vbExclamation, "自动刷新错误"
+    Debug.Print "环境检查错误: " & Err.Description
 End Sub
 
-' ========== 显示欢迎消息 ==========
-Private Sub ShowWelcomeMessage()
-    ' 显示欢迎和使用说明
+' 确保工作表有正确的表头
+Private Sub EnsureWorksheetHeaders(ws As Worksheet)
+    On Error GoTo ErrorHandler
     
-    Dim welcomeMsg As String
-    welcomeMsg = "欢迎使用ETF价格追踪器！" & vbCrLf & vbCrLf & _
-                "使用说明：" & vbCrLf & _
-                "1. 在A列输入ETF代码（6位数字）" & vbCrLf & _
-                "2. 点击'刷新价格'按钮获取最新价格" & vbCrLf & _
-                "3. 系统会自动填充B列（收盘价）和C列（数据日期）" & vbCrLf & vbCrLf & _
-                "API状态：" & CheckApiStatus()
+    ' 检查是否已有表头
+    If Len(Trim(ws.Cells(1, 1).Value)) > 0 Then
+        Exit Sub
+    End If
     
-    MsgBox welcomeMsg, vbInformation, "ETF价格追踪器"
+    ' 设置表头
+    ws.Cells(1, 1).Value = "ETF代码"
+    ws.Cells(1, 2).Value = "收盘价"
+    ws.Cells(1, 3).Value = "状态"
+    ws.Cells(1, 4).Value = "更新时间"
+    
+    ' 格式化表头
+    With ws.Range("A1:D1")
+        .Font.Bold = True
+        .Interior.Color = RGB(200, 200, 200)
+        .Borders.LineStyle = xlContinuous
+    End With
+    
+    ' 设置列宽
+    ws.Columns("A:A").ColumnWidth = 12  ' ETF代码
+    ws.Columns("B:B").ColumnWidth = 15  ' 收盘价
+    ws.Columns("C:C").ColumnWidth = 12  ' 状态
+    ws.Columns("D:D").ColumnWidth = 20  ' 更新时间
+    
+    Exit Sub
+    
+ErrorHandler:
+    Debug.Print "设置表头错误: " & Err.Description
 End Sub
 
-' ========== 显示手动刷新提示 ==========
-Private Sub ShowManualRefreshTip()
-    ' 显示手动刷新的提示信息
-    
-    Dim tipMsg As String
-    tipMsg = "您可以随时通过以下方式刷新价格：" & vbCrLf & vbCrLf & _
-            "• 点击工作表中的'刷新价格'按钮" & vbCrLf & _
-            "• 使用快捷键 Ctrl+Shift+R" & vbCrLf & _
-            "• 在VBA编辑器中运行 RefreshAllPrices 宏"
-    
-    MsgBox tipMsg, vbInformation, "使用提示"
-End Sub
-
-' ========== 初始化工作表（如果需要）==========
-Private Sub InitializeWorksheetIfNeeded()
-    ' 如果ETF价格工作表不存在，则创建并初始化
-    
-    On Error Resume Next
+' 创建控制按钮
+Private Sub CreateControlButtons()
+    On Error GoTo ErrorHandler
     
     Dim ws As Worksheet
-    Dim wsExists As Boolean
+    Set ws = ActiveSheet
     
-    wsExists = False
-    For Each ws In Me.Worksheets
-        If ws.Name = WORKSHEET_NAME Then
-            wsExists = True
-            Exit For
-        End If
-    Next ws
+    ' 删除现有按钮（如果存在）
+    Call DeleteExistingButtons(ws)
     
-    If Not wsExists Then
-        Call InitializeWorksheet
-    End If
+    ' 创建刷新按钮
+    Dim refreshBtn As Button
+    Set refreshBtn = ws.Buttons.Add(ws.Cells(1, 6).Left, ws.Cells(1, 6).Top, 80, 25)
+    refreshBtn.Name = "RefreshButton"
+    refreshBtn.Caption = "刷新数据"
+    refreshBtn.OnAction = "Module_Refresh.RefreshETFPrices"
+    
+    ' 创建配置按钮
+    Dim configBtn As Button
+    Set configBtn = ws.Buttons.Add(ws.Cells(1, 7).Left, ws.Cells(1, 7).Top, 80, 25)
+    configBtn.Name = "ConfigButton"
+    configBtn.Caption = "设置"
+    configBtn.OnAction = "Module_Config.ShowConfigDialog"
+    
+    ' 创建清除按钮
+    Dim clearBtn As Button
+    Set clearBtn = ws.Buttons.Add(ws.Cells(1, 8).Left, ws.Cells(1, 8).Top, 80, 25)
+    clearBtn.Name = "ClearButton"
+    clearBtn.Caption = "清除数据"
+    clearBtn.OnAction = "Module_Refresh.ClearAllData"
+    
+    ' 创建示例按钮
+    Dim sampleBtn As Button
+    Set sampleBtn = ws.Buttons.Add(ws.Cells(1, 9).Left, ws.Cells(1, 9).Top, 80, 25)
+    sampleBtn.Name = "SampleButton"
+    sampleBtn.Caption = "示例代码"
+    sampleBtn.OnAction = "Module_Refresh.AddSampleETFCodes"
+    
+    Exit Sub
+    
+ErrorHandler:
+    Debug.Print "创建按钮错误: " & Err.Description
 End Sub
 
-' ========== 创建刷新按钮（如果需要）==========
-Private Sub CreateRefreshButtonIfNeeded()
-    ' 如果刷新按钮不存在，则创建
-    
+' 删除现有按钮
+Private Sub DeleteExistingButtons(ws As Worksheet)
     On Error Resume Next
     
-    Dim ws As Worksheet
-    Set ws = Me.Worksheets(WORKSHEET_NAME)
+    Dim btn As Button
     
-    If ws Is Nothing Then Exit Sub
-    
-    ' 检查按钮是否存在
-    Dim btnExists As Boolean
-    Dim shp As Shape
-    
-    btnExists = False
-    For Each shp In ws.Shapes
-        If shp.Name = "RefreshButton" Then
-            btnExists = True
-            Exit For
-        End If
-    Next shp
-    
-    If Not btnExists Then
-        Call CreateRefreshButton
-    End If
+    ' 删除已知的按钮
+    ws.Buttons("RefreshButton").Delete
+    ws.Buttons("ConfigButton").Delete
+    ws.Buttons("ClearButton").Delete
+    ws.Buttons("SampleButton").Delete
 End Sub
 
-' ========== 检查是否在交易时间 ==========
-Private Function IsMarketHours() As Boolean
-    ' 检查当前是否在股市交易时间
-    ' 简化版本：周一到周五，9:00-15:30
+' 显示欢迎对话框
+Private Sub ShowWelcomeDialog()
+    On Error GoTo ErrorHandler
     
-    Dim currentTime As Date
-    Dim dayOfWeek As Integer
-
-    currentTime = Now()
-    dayOfWeek = Weekday(currentTime)
-
-    ' 检查是否为工作日（周一到周五）
-    If dayOfWeek < 2 Or dayOfWeek > 6 Then
-        IsMarketHours = False
-        Exit Function
+    Dim msg As String
+    msg = "欢迎使用ETF价格获取工具！" & vbCrLf & vbCrLf
+    msg = msg & "使用方法：" & vbCrLf
+    msg = msg & "1. 在A列输入ETF代码（如：159915）" & vbCrLf
+    msg = msg & "2. 点击'设置'按钮配置API Token" & vbCrLf
+    msg = msg & "3. 点击'刷新数据'获取价格信息" & vbCrLf & vbCrLf
+    msg = msg & "注意：需要有效的lixinger API Token才能使用"
+    
+    MsgBox msg, vbInformation, "ETF价格工具 - 使用指南"
+    
+    ' 检查是否需要配置
+    If Not Module_Config.ValidateConfig() Then
+        If MsgBox("是否现在配置API Token？", vbYesNo + vbQuestion, "配置确认") = vbYes Then
+            Module_Config.ShowConfigDialog
+        End If
     End If
     
-    ' 检查时间范围（9:00-15:30）
-    Dim currentHour As Integer
-    Dim currentMinute As Integer
+    Exit Sub
     
-    currentHour = Hour(currentTime)
-    currentMinute = Minute(currentTime)
+ErrorHandler:
+    Debug.Print "显示欢迎对话框错误: " & Err.Description
+End Sub
+
+' 检查是否已初始化
+Private Function HasBeenInitialized() As Boolean
+    On Error Resume Next
     
-    If currentHour < 9 Or currentHour > 15 Then
-        IsMarketHours = False
-    ElseIf currentHour = 15 And currentMinute > 30 Then
-        IsMarketHours = False
-    Else
-        IsMarketHours = True
-    End If
+    HasBeenInitialized = (Module_Config.GetConfig("app.initialized", False) = True)
 End Function
 
-' ========== 基于时间检查是否应该刷新 ==========
-Private Function ShouldRefreshBasedOnTime() As Boolean
-    ' 基于上次刷新时间决定是否应该刷新
-    ' 避免过于频繁的自动刷新
-    
-    ShouldRefreshBasedOnTime = True
-    
+' 标记为已初始化
+Private Sub MarkAsInitialized()
     On Error Resume Next
     
-    ' 获取上次刷新时间（存储在隐藏单元格中）
-    Dim ws As Worksheet
-    Set ws = Me.Worksheets(WORKSHEET_NAME)
+    Module_Config.SetConfig "app.initialized", True
+End Sub
+
+' 右键菜单事件
+Private Sub Workbook_SheetBeforeRightClick(ByVal Sh As Object, ByVal Target As Range, Cancel As Boolean)
+    On Error GoTo ErrorHandler
     
-    If ws Is Nothing Then Exit Function
-    
-    Dim lastRefreshTime As Date
-    Dim lastRefreshStr As String
-    
-    ' 使用隐藏单元格存储上次刷新时间
-    lastRefreshStr = ws.Range("Z1").Value
-    
-    If Len(lastRefreshStr) > 0 And IsDate(lastRefreshStr) Then
-        lastRefreshTime = CDate(lastRefreshStr)
+    ' 如果点击的是A列（ETF代码列）
+    If Target.Column = 1 And Target.Row > 1 Then
+        Dim etfCode As String
+        etfCode = Trim(Target.Value)
         
-        ' 如果距离上次刷新不到30分钟，跳过自动刷新
-        If DateDiff("n", lastRefreshTime, Now()) < 30 Then
-            ShouldRefreshBasedOnTime = False
+        If Len(etfCode) > 0 And Module_API.ValidateETFCodes(etfCode) Then
+            ' 显示自定义菜单
+            Call ShowCustomContextMenu(etfCode)
+            Cancel = True  ' 取消默认右键菜单
         End If
     End If
-End Function
-
-' ========== 记录刷新时间 ==========
-Private Sub RecordRefreshTime()
-    ' 记录当前刷新时间
     
-    On Error Resume Next
+    Exit Sub
     
-    Dim ws As Worksheet
-    Set ws = Me.Worksheets(WORKSHEET_NAME)
-    
-    If Not ws Is Nothing Then
-        ws.Range("Z1").Value = Format(Now(), "yyyy-mm-dd hh:mm:ss")
-        ws.Range("Z1").EntireColumn.Hidden = True
-    End If
+ErrorHandler:
+    Debug.Print "右键菜单事件错误: " & Err.Description
 End Sub
 
-' ========== 检查数据新鲜度 ==========
-Private Sub CheckDataFreshness()
-    ' 检查数据是否为最新（在激活工作表时）
+' 显示自定义上下文菜单
+Private Sub ShowCustomContextMenu(etfCode As String)
+    On Error GoTo ErrorHandler
     
+    ' 删除现有的自定义菜单
     On Error Resume Next
+    Application.CommandBars("ETF_ContextMenu").Delete
+    On Error GoTo ErrorHandler
     
-    Dim ws As Worksheet
-    Set ws = Me.Worksheets(WORKSHEET_NAME)
+    ' 创建新的上下文菜单
+    Dim contextMenu As CommandBar
+    Set contextMenu = Application.CommandBars.Add(Name:="ETF_ContextMenu", Position:=msoBarPopup, Temporary:=True)
     
-    If ws Is Nothing Then Exit Sub
+    ' 添加菜单项
+    Dim menuItem As CommandBarButton
     
-    ' 获取最后一次刷新时间
-    Dim lastRefreshStr As String
-    lastRefreshStr = ws.Range("Z1").Value
+    ' 刷新单个ETF
+    Set menuItem = contextMenu.Controls.Add(Type:=msoControlButton)
+    menuItem.Caption = "刷新 " & etfCode
+    menuItem.OnAction = "RefreshSingleETFFromMenu"
+    menuItem.Parameter = etfCode
     
-    If Len(lastRefreshStr) > 0 And IsDate(lastRefreshStr) Then
-        Dim lastRefresh As Date
-        lastRefresh = CDate(lastRefreshStr)
-        
-        ' 如果数据超过1天未更新，显示提示
-        If DateDiff("d", lastRefresh, Now()) > 1 Then
-            Application.StatusBar = "数据可能已过期，建议刷新价格数据"
-            
-            ' 5秒后清除状态栏消息
-            Application.OnTime Now + TimeValue("00:00:05"), "ClearStatusBar"
-        End If
-    End If
+    ' 显示菜单
+    contextMenu.ShowPopup
+    
+    Exit Sub
+    
+ErrorHandler:
+    Debug.Print "显示自定义菜单错误: " & Err.Description
 End Sub
 
-' ========== 清除状态栏消息 ==========
-Public Sub ClearStatusBar()
-    ' 清除状态栏消息的公共函数
-    Application.StatusBar = False
-End Sub
-
-' ========== 快捷键绑定 ==========
-Private Sub Workbook_WindowActivate(ByVal Wn As Window)
-    ' 设置快捷键绑定
+' 从菜单刷新单个ETF
+Public Sub RefreshSingleETFFromMenu()
+    On Error GoTo ErrorHandler
     
-    On Error Resume Next
+    Dim etfCode As String
+    etfCode = Application.CommandBars.ActionControl.Parameter
     
-    ' 绑定Ctrl+Shift+R为刷新快捷键
-    Application.OnKey "^+R", "RefreshAllPrices"
+    Module_Refresh.RefreshSingleETF etfCode
     
-    ' 绑定Ctrl+Shift+T为API测试快捷键
-    Application.OnKey "^+T", "TestApiConnection"
+    Exit Sub
     
-    ' 绑定Ctrl+Shift+A为添加ETF代码快捷键
-    Application.OnKey "^+A", "AddNewETFCode"
-End Sub
-
-' ========== 取消快捷键绑定 ==========
-Private Sub Workbook_WindowDeactivate(ByVal Wn As Window)
-    ' 取消快捷键绑定
-    
-    On Error Resume Next
-    
-    Application.OnKey "^+R"
-    Application.OnKey "^+T"
-    Application.OnKey "^+A"
+ErrorHandler:
+    Debug.Print "从菜单刷新单个ETF错误: " & Err.Description
 End Sub
